# Civicomfy

./: .gitignore  DEV_README.md  INSTALL.md  LICENSE  README.md  __init__.py  card_meta.json  config.py  pyproject.toml  requirements.txt  workflows.json
.claude/: settings.local.json
.github/workflows/: publish.yml
api/: civitai.py  huggingface.py
downloader/: aria2_daemon.py  aria2_manager.py  chunk_downloader.py  manager.py
server/: __init__.py  routes.py  utils.py
server/routes/: CancelDownload.py  ClearHistory.py  DeleteLibraryItem.py  DownloadHuggingFace.py  DownloadModel.py  DownloaderSettings.py  GetBaseModels.py  GetHuggingFaceDetails.py  GetLibrary.py  GetModelDetails.py  GetModelDirs.py  GetModelTypes.py  GetStatus.py  HuggingFaceSearch.py  LocalModelDetails.py  OpenPath.py  RetryDownload.py  SearchModels.py  ServeLocalMedia.py  Workflows.py  __init__.py
tests/: test_card_meta.py
tests/js/: promptClipboard.test.mjs
utils/: aria2_binary.py  card_meta.py  downloader_factory.py  helpers.py
web/css/: civitaiDownloader.css
web/js/: civitaiDownloader.css  civitaiDownloader.js
web/js/api/: civitai.js
web/js/ui/: UI.js  chipEditor.js  detailsModal.js  feedback.js  libraryRenderer.js  previewRenderer.js  promptClipboard.js  searchRenderer.js  statusRenderer.js  templates.js
web/js/ui/handlers/: downloadHandler.js  eventListeners.js  searchHandler.js  settingsHandler.js  statusHandler.js
web/js/ui/nodes/: librarySearchNode.js  portSchema.js
web/js/utils/: clipboardAccess.js  cookies.js  dom.js  promptClipboard.js
