[project]
name = "civicomfy"
description = "Civicomfy seamlessly integrates Civitai's vast model repository directly into ComfyUI, allowing you to search, download, and organize AI models without leaving your workflow."
version = "1.0.4"
license = {file = "LICENSE"}
dependencies = [
    "aria2p>=0.12.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0"
]

[project.urls]
Repository = "https://github.com/MoonGoblinDev/Civicomfy"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "moongoblin"
DisplayName = "Civicomfy"
Icon = ""
